--- a/src/main/webapp/employeeList.html
+++ b/src/main/webapp/employeeList.html
@@ -58,13 +58,13 @@
                     <tr>
                         <td class="TailLabel">部门：</td>
                         <td>
-                            <input type="text" id="deptSelect2" name="departmentName" class="TailInput" value="请选择"/>
+                            <input type="text" id="deptSelect2" name="departmentID" class="TailInput" value="请选择"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="TailLabel">职位：</td>
                         <td>
-                            <input type="text" id="positionSelect" name="positionName" class="TailInput" value="请选择"/>
+                            <input type="text" id="positionSelect" name="positionID" class="TailInput" value="请选择"/>
                         </td>
                     </tr>
                     <tr>
@@ -130,13 +130,13 @@
                     <tr>
                         <td class="TailLabel">部门：</td>
                         <td>
-                            <input type="text" id="deptSelect3" name="departmentName" class="TailInput" value="请选择"/>
+                            <input type="text" id="deptSelect3" name="departmentID" class="TailInput" value="请选择"/>
                         </td>
                     </tr>
                     <tr>
                         <td class="TailLabel">职位：</td>
                         <td>
-                            <input type="text" id="positionSelect2" name="positionName" class="TailInput" value="请选择"/>
+                            <input type="text" id="positionSelect2" name="positionID" class="TailInput" value="请选择"/>
                         </td>
                     </tr>
                     <tr>
