--- a/src/main/webapp/noteList.html
+++ b/src/main/webapp/noteList.html
@@ -159,8 +159,10 @@
                         <td class="TailLabel">申请人：</td>
                         <td colspan="4">
                             <input type="hidden" name="noteID"/>
-                            <input type="hidden" name="employeeID"/>
-                            <input type="hidden" name="departmentID"/>
+                            <input type="hidden" name="employeeID" id="employeeID"/>
+                            <input type="hidden" name="departmentID" id="departmentID"/>
+                            <input type="hidden" name="firstDName" id="firstDName"/>
+                            <input type="hidden" name="secondDName" id="secondDName"/>
                             <input type="text" class="easyui-validatebox TailInput" name="employeeName" id="employeeName" >
                             <span class="formSpan">*</span>
                             <a id="employeeEditSee" href="javascript:" class="easyui-linkbutton tableFindBut" data-options="iconCls:'icon-search'"
